# jiuziai-macros

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/regex/: tokens.rs
core/src/validate/: boundary.rs  check_able.rs  codegen.rs  metadata.rs  mod.rs  tokens.rs
core/src/validate/parse/: attributes.rs  field_meta.rs  mod.rs
core/src/validate/types/: basic_types.rs  generic_types.rs  mod.rs
core/src/validator/: mod.rs  tokens.rs
core/tests/: regex_test.rs  validate_test.rs
libs/: Cargo.toml
libs/src/: lib.rs
libs/src/types/: e.rs  mod.rs  r.rs
libs/src/validate/: helper.rs  mod.rs  types.rs
libs/src/validation/: mod.rs
validator/: Cargo.toml  README.md
validator/src/: lib.rs
validator/tests/: derive_integration.rs
