[workspace]
resolver = "3"
members = [
    "libs",
    "core"
]

[workspace.dependencies]
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.103"
serde_json = "1.0.145"
serde_with = "3.16.0"
serde = { version = "1.0.228", features = ["derive"] }
dyn-clone = "1.0.20"
num_enum = "0.7.5"
regex = "1.12.2"
regex-syntax = "0.8.8"
once_cell = "1.21.3"
rust_decimal = "1.39.0"
chrono = "0.4.42"
rust_decimal_macros = "1.39.0"
lazy_static = "1.5.0"
jiuziai-macro-libs = { path = "libs" }
jiuziai-macro-core = { path = "core" }

[patch.crates-io]
# During local development, override the registry version with the local path
jiuziai-macro-libs = { path = "libs" }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
debug = false
incremental = false
rpath = false
debug-assertions = false


[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true
incremental = true
rpath = false

[profile.test]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true
incremental = true
rpath = false
