[package]
name = "jiuziai-macro-core"
version = "0.0.1"
edition = "2024"
authors = ["jiuziai <jiuziai@qq.com>"]
description = "个人常用派生宏、过程宏、属性宏、声明宏集合"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/jiuziai/jiuziai-macros"
keywords = ["macro"]

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
dyn-clone.workspace = true
num_enum.workspace = true
jiuziai-macro-libs = { path = "../libs" }
regex.workspace = true
regex-syntax.workspace = true
once_cell.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
rust_decimal_macros.workspace = true
lazy_static.workspace = true