[package]
name = "jiuziai-macro-libs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
dyn-clone.workspace = true
regex.workspace = true