[package]
name = "jiuziai-macro-libs"
version = "0.0.1"
edition = "2024"
authors = ["jiuziai <jiuziai@qq.com>"]
description = "jiuziai-macro-core依赖库"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/jiuziai/jiuziai-macros"
keywords = ["macro", "libs"]

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
dyn-clone.workspace = true
regex.workspace = true
regex-syntax.workspace = true
 