[package]
name = "jiuziai-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
dyn-clone.workspace = true
num_enum.workspace = true
jiuziai-macro-libs.workspace = true