[package]
name = "jiuziai-validator"
version = "0.0.1"
edition = "2024"
authors = ["jiuziai <jiuziai@qq.com>"]
description = "派生宏 #[derive(Validate)] 的实现，用于声明式字段校验"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/jiuziai/jiuziai-macros"
keywords = ["validation","derive","proc-macro"]

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
dyn-clone.workspace = true
num_enum.workspace = true
jiuziai-macro-libs.workspace = true

 